# small-works

./: README.md
ChatRoom/ChatRoomClient/: CMakeLists.txt  ChatRoomClient.cpp  a.out  client_test
ChatRoom/ChatRoomClient/head/: ChatRoomClient.h
ChatRoom/ChatRoomClient/src/: ChatRoomClient.cpp  main.cpp
ChatRoom/ChatRoomServer/: CMakeLists.txt  ChatRoomSer.cpp  ChatRoomSer.h  a.out  server_test
ChatRoom/ChatRoomServer/src/: ChatRoomSer.cpp  ThreadPool.cpp  main.cpp
Dictionary/: ThreadPool.h  a.out  database_manager.cpp  database_manager.h  main.cpp  message.hpp  server.cpp  server.hpp
HTTP/: handle.cpp  handle.h  http.cpp  http.h  myhead.h
HTTP-main/: List.md  main.cpp  summary.md
HTTP/wwwroot/: 405.html  index.html
TFTP-main/: list.md  summry.md
TFTP-main/tftp_client/head/: myhead.h
TFTP-main/tftp_client/src/: main.cpp
TFTP-main/tftp_server/: main.cpp
TFTP/tftp_client/: tftp_client
TFTP/tftp_client/head/: tftp_client.h
TFTP/tftp_client/src/: tftp_client.cpp
TFTP/tftp_server/: CMakeLists.txt  myhead.h  tftp_server.cpp  tftp_server.h
TFTP/tftp_server/file/: demo.txt  summary.md
ThreadPool/: main.cpp
